contact/.k8s/devel/storage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-storage-service
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - cdn.contact.vexl.devel.cleevio.io
      secretName: vexl-contact-devel-storage-service-tls
  rules:
    - host: cdn.contact.vexl.devel.cleevio.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: application-storage-cluster-ip-service
                port:
                  number: 80
